--- a/css/estilo.css
+++ b/css/estilo.css
@@ -17,7 +17,7 @@ body{
     background-color: blue;
     color: #fff;
     margin-bottom: 50px;
-    padding: 5px;
+    padding: 10px;
 }
 
 .container-8{
@@ -64,34 +64,22 @@ body{
 .form-control{
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
-    max-height: 38px;
+    color: #495057;
+    background-color: #fff;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    height: 38px;
 }
 
+#resposta{
+    background-color:#e9e9e9;
+    /* color: black; */
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.btn-primary{
+    background-color: blue;
+    color: #fff;
+}
 
 
 /*# sourceMappingURL=estilo.css.map */
@@ -101,9 +89,7 @@ body{
     height: 250px;
 }
 
-#resposta{
-    min-height: 38px;
-}
+
 
 input[type=number]::-webkit-inner-spin-button { 
     -webkit-appearance: none;
@@ -112,5 +98,36 @@ input[type=number]::-webkit-inner-spin-button {
 input[type=number] { 
    -moz-appearance: textfield;
    appearance: textfield;
+
+}
+
+
+@media screen and (max-width: 900px){
+    .container-6{
+        width: 80%;
+        margin: auto;
+    }
+}
+
+@media screen and (max-width: 750px){
+    .break{
+        display: flex;
+        flex-direction: column;
+    }
+    .break .form-control{
+        width: 100%;
+        margin-bottom: 5px;
+    }
+}
+
+@media screen and (max-width: 500px){
+
+    .form-control-1{
+        width: 15%;
+    }
+    
+    .form-control-4{
+        width: 40%;
+    }
 
 }
